src/ui/reader/snapshots/repy__ui__reader__snapshot_tests__library_window_sorted_by_title.snap
---
source: src/ui/reader/snapshot_tests.rs
expression: reader.terminal.backend()
---
"                         Accessible EPUB 3                           ~1m left 0%"
"                                                                                "
"                                                                                "
"             ┌Library — by title─────────────────────────────────┐              "
"             │HINT: Enter open  c details  f format  d delete  R │              "
"             │                                                   │              "
"             │ new         unread: A Scanned Book - Some Author (│              "
"             │  0% [time]: Accessible EPUB 3 - Matt Garri│              "
"             │                                                   │              "
"             │                                                   │              "
"             │                                                   │              "
"             │                                                   │              "
"             │                                                   │              "
"             │                                                   │              "
"             │                                                   │              "
"             │                                                   │              "
"             │                                                   │              "
"             │                                                   │              "
"             │                                                   │              "
"             │                                                   │              "
"             └───────────────────────────────────────────────────┘              "
"                                                                                "
"                                                                                "
"                                                                                "
