src/ui/reader/snapshots/repy__ui__reader__snapshot_tests__line_numbers.snap
---
source: src/ui/reader/snapshot_tests.rs
expression: reader.terminal.backend()
---
"                         Accessible EPUB 3                           ~1m left 0%"
"                                                                                "
"                                                                                "
"                            [[Image: First Edition]]                            "
"     2                                                                          "
"                                       ***                                      "
"     4                                                                          "
"     5                                                                          "
"     6                                                                          "
"     7                                                                          "
"     8                                                                          "
"     9                                                                          "
"     10                                                                         "
"     11                                                                         "
"     12                                                                         "
"     13                                                                         "
"     14                                                                         "
"     15                                                                         "
"     16                                                                         "
"     17                                                                         "
"     18                                                                         "
"     19                                                                         "
"                                                                                "
"                                                                                "
