src/ui/reader/snapshots/repy__ui__reader__snapshot_tests__multi_row_search_hit_counter_and_layout.snap
---
source: src/ui/reader/snapshot_tests.rs
assertion_line: 180
expression: reader.terminal.backend()
---
"                    Accessible EPUB 3                      match 1/1 ~1m left 0%"
"                                                                                "
"                                                                                "
"                            [[Image: First Edition]]                            "
"                                                                                "
"                                       ***                                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
