src/ui/reader/snapshots/repy__ui__reader__snapshot_tests__opds_catalogs_window.snap
---
source: src/ui/reader/snapshot_tests.rs
expression: reader.terminal.backend()
---
"                         Accessible EPUB 3                           ~1m left 0%"
"                                                                                "
"          ┌ OPDS Catalogs · 1/1 ─────────────────────────────────────┐          "
"          │Project Gutenberg  https://www.gutenberg.org/ebooks/search│          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          └ Enter open · q Library ──────────────────────────────────┘          "
"                                                                                "
"                                                                                "
"                                                                                "
