src/ui/reader/snapshots/repy__ui__reader__snapshot_tests__opds_download_progress_centered.snap
---
source: src/ui/reader/snapshot_tests.rs
expression: reader.terminal.backend()
---
"                         Accessible EPUB 3                           ~1m left 0%"
"                                                                                "
"          ┌ Sample Shelf ────────────────────────────────────────────┐          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │  Downloading [████████        ]  50% · 512 KiB / 1.0 MiB │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          └ ⏎ open · / search · [/] page · f fmt · c details · h back┘          "
"                                                                                "
"                                                                                "
"                                                                                "
