src/ui/reader/snapshots/repy__ui__reader__snapshot_tests__opds_feed_window.snap
---
source: src/ui/reader/snapshot_tests.rs
expression: reader.terminal.backend()
---
"                         Accessible EPUB 3                           ~1m left 0%"
"                                                                                "
"          ┌ Sample Shelf · 2/3 · page 1 ───────────────────── next ] ┐          "
"          │› Science Fiction                                         │          "
"          │A Long Voyage — Ada Author, Bo W… [EPUB (with images) 1/2]│          "
"          │Untitled Draft                               [unavailable]│          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          │                                                          │          "
"          └ ⏎ open · / search · [/] page · f fmt · c details · h back┘          "
"                                                                                "
"                                                                                "
"                                                                                "
