src/ui/reader/snapshots/repy__ui__reader__snapshot_tests__rename_bookmark.snap
---
source: src/ui/reader/snapshot_tests.rs
assertion_line: 134
expression: reader.terminal.backend()
---
"                         Accessible EPUB 3                           ~1m left 0%"
"                                                                                "
"                                                                                "
"                            [[Image: First Edition]]                            "
"                ┌Bookmarks─────────────────────────────────────┐                "
"                │Preface note (line 1)                         │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                └──────────────────────────────────────────────┘                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
