src/ui/reader/snapshots/repy__ui__reader__snapshot_tests__scroll_down.snap
---
source: src/ui/reader/snapshot_tests.rs
expression: reader.terminal.backend()
---
"                   Accessible EPUB 3                     links:1 (u) ~1m left 0%"
"                                                                                "
"                                                                                "
"                                                                                "
"     Matt Garrish                                                               "
"                                                                                "
"     Editor                                                                     "
"                                                                                "
"     Brian Sawyer                                                               "
"                                                                                "
"     Editor                                                                     "
"                                                                                "
"     Dan Fauxsmith                                                              "
"                                                                                "
"     Copyright © 2012 O’Reilly Media, Inc                                       "
"                                                                                "
"     O’Reilly books may be purchased for educational, business, or sales        "
"     promotional use. Online editions are also available for most titles        "
"     ([http://my.safaribooksonline.com]). For more information, contact our     "
"     corporate/institutional sales department: (800) 998-9938 or [corpo-        "
"     rate@oreilly.com].                                                         "
"                                                                                "
"                                                                                "
"                                                                                "
